--- a/mod2_solutions/main.css
+++ b/mod2_solutions/main.css
@@ -6,13 +6,7 @@
 h1{
 	text-align: center;
 }
-@media (min-width: 992px){
-	.col-lg-4{
-		float: left;
-		width: 33.33%;
-		
-	}
-	h2{
+h2{
 		float: right;
 		margin-top: 0px;
 		margin-bottom: 0px;
@@ -21,17 +15,26 @@ h1{
 		border: 1px solid black;
 		background-color: brown;
 	}
-	.col-lg-4 > div{
+
+.container > div > div >div{
+		clear: right;
+		padding: 10px;
+	}
+	
+@media (min-width: 992px){
+	.col-lg-4{
+		float: left;
+		width: 33.33%;
+		
+	}
+	.container > div > div{
 		max-width: 90%;
 		margin-left: auto;
 		margin-right: auto;
 		border: 1px solid black;
 		background-color: grey;
 	}
-	.col-lg-4 > div >div{
-		clear: right;
-		padding: 10px;
-	}
+	
 	
 }
 
@@ -47,25 +50,12 @@ h1{
 		clear: both;
 		margin-top: 5%;
 	}
-	h2{
-		float: right;
-		margin-top: 0px;
-		margin-bottom: 0px;
-		padding-left: 10px;
-		padding-right: 10px;
-		border: 1px solid black;
-		background-color: brown;
-	}
 	.col-md-6 > div{
 		max-width: 90%;
 		margin-left: auto;
 		margin-right: auto;
 		border: 1px solid black;
 		background-color: grey;
-	}
-	.col-md-6 > div >div{
-		clear: right;
-		padding: 10px;
 	}
 	.col-md-12 > div{
 		max-width: 95%;
@@ -74,11 +64,8 @@ h1{
 		border: 1px solid black;
 		background-color: grey;
 	}
-	.col-md-12 > div >div{
-		clear: right;
-		padding: 10px;
-	}
-
+	
+	
 	
 }
 @media (max-width: 767px){
@@ -88,24 +75,14 @@ h1{
 		margin-bottom: 5%;
 		
 	}
-	h2{
-		float: right;
-		margin-top: 0px;
-		margin-bottom: 0px;
-		padding-left: 10px;
-		padding-right: 10px;
-		border: 1px solid black;
-		background-color: brown;
-	}
-	.col-sm-12 > div{
+	.container > div > div{
 		max-width: 90%;
 		margin-left: auto;
 		margin-right: auto;
 		border: 1px solid black;
 		background-color: grey;
 	}
-	.col-sm-12 > div >div{
-		clear: right;
-		padding: 10px;
-	}
+	
+	
+	
 }
