--- a/mod2_solutions/main.css
+++ b/mod2_solutions/main.css
@@ -1,6 +1,7 @@
 *{
 	box-sizing: border-box;
-	font-family:sans-serif;
+	font-family: 'Oxygen', sans-serif;
+	
 }
 
 h1{
@@ -35,7 +36,9 @@ h2{
 		clear: right;
 		padding: 10px;
 	}
-	
+	.image{
+		max-width: 100%;
+	}
 @media (min-width: 992px){
 	.col-lg-4{
 		float: left;
@@ -101,3 +104,4 @@ h2{
 	
 	
 }
+
